fix overflow on home page

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -52,14 +52,14 @@
 
 @media screen and (max-width: 75rem) {
   .name {
-    width: 700px;
+    width: 650px;
     height: 250px;
   }
 }
 
 @media screen and (max-width: 42rem) {
   .name {
-    width: 400px;
+    width: 380px;
     font-size: 3rem;
     height: 150px;
   }
